--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
 
   header {
 
-    height: 60vh;
+    min-height: 100vh;
     background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=);
     background-size: cover;
     background-position: 100% 30%;
@@ -34,6 +34,8 @@
     padding: 10px;
     width: 50vw;
     flex-wrap: wrap;
+    position:fixed;
+    top: 10px;
 
   }
 
@@ -45,6 +47,7 @@
     padding: 1vh;
     flex-grow: 0.3;
     max-width: 80%;
+    
   }
 
   .nav_List {
@@ -65,6 +68,39 @@
     color: rgb(255, 255, 255);
   }
 
+
+
+  .main_Div {
+    display: flex;
+    justify-content: center;
+    gap: 5vw;
+    padding: 50px 0;
+  }
+
+  .info_Card {
+
+    width: 380px;
+    height: 400px;
+    border: 4px solid rgb(185, 185, 185);
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  .card_Description {
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    height: 300px;
+    overflow: hidden;
+  }
+
+  .read_More {
+
+    display: block;
+    margin: 10px auto 0 auto;
+    width: 90px;
+    height: 40px;
+  }
 
   @media screen {
     
