--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,8 @@
     border-radius:100%;
     object-fit:cover;
     transform: scale(1.35);
+    position: sticky;
+    top: 0;
     
   }
 
@@ -33,8 +35,7 @@
     margin: 0 auto;
     padding: 10px;
     width: 50vw;
-    flex-wrap: wrap;
-    position:fixed;
+    position: sticky;
     top: 10px;
 
   }
@@ -43,10 +44,17 @@
 
   .global_Nav {
     border: 2px solid rgb(255, 255, 255);
+    width: 700px;
+    background-color: black;
     border-radius: 90px;
     padding: 1vh;
     flex-grow: 0.3;
-    max-width: 80%;
+    /* max-width: 80%; */
+    margin: 0 auto;
+    position:fixed;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%);
     
   }
 
