--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,10 +18,32 @@
     
   }
 
+  .generic_Button {
+
+    color: white;
+    width: max-content;
+    padding: 15px 20px;
+    font-size: 21px;
+    border: none;
+    border-radius: 25px;
+    font-weight: bold;
+    background: #00b2d6;
+    background: linear-gradient(220deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
+  }
+
+  .generic_Button:hover {
+
+    cursor: pointer;
+    background: #00b2d6;
+    background: linear-gradient(220deg, rgb(29, 165, 192) 8%, rgb(0, 91, 165) 98%);
+    
+  }
+
   header {
 
     min-height: 100vh;
-    background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=);
+    /* background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=); */
+    background-color: black;
     background-size: cover;
     background-position: 100% 30%;
     padding-top: 10px;
@@ -34,27 +56,30 @@
     align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 50vw;
+    width: 100vw;
+    max-width: 100vw;
     position: sticky;
     top: 10px;
+    z-index: 5;
 
   }
 
  
 
   .global_Nav {
-    border: 2px solid rgb(255, 255, 255);
+    border: 1px solid rgba(255, 255, 255, 0.61);
     width: 700px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.616);
+    backdrop-filter: blur(10px);
     border-radius: 90px;
     padding: 1vh;
     flex-grow: 0.3;
     /* max-width: 80%; */
     margin: 0 auto;
     position:fixed;
-    top: 10px;
+    top: 5%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
     
   }
 
@@ -74,6 +99,84 @@
 
     text-decoration: none;
     color: rgb(255, 255, 255);
+  }
+
+
+  .intro_Container {
+    background-color: rgb(19, 19, 19);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    padding: 5px;
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap: 40px;
+    border-radius: 10px;
+    
+    
+    
+  }
+
+  .intro_Left {
+
+    min-width: 60%;
+    max-width: 60%;
+    height: 100%;
+    padding: 20px;
+    text-align: center;
+    /* background-color: rgb(0, 143, 187); */
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .main_Title {
+
+    margin: 0;
+    font-size: 72px;
+  }
+
+  #tsr_Text {
+    background: #00b2d6;
+    background: linear-gradient(100deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
+    background-clip: text;
+    color: transparent;
+  }
+
+  .slogan {
+
+    margin: 5px 20px;
+    font-size: 32px;
+    font-weight: bold;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .intro_Description {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px;
+    font-size: 32px;
+  }
+
+  .intro_Right {
+    height: 100%;
+    overflow: hidden;
+    border-radius: 15px;
+    
+  }
+  
+  .intro_Image {
+    height: 100%;
+    
+    transform: translate(-10%);
+    
   }
 
 
@@ -110,7 +213,26 @@
     height: 40px;
   }
 
-  @media screen {
+  .footer_Div {
+
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+  }
+
+  .footer_Column {
+
+    max-width: 200px;
+  }
+
+  .footer_Logo {
+
+    float: left;
+    margin-right: 8px;
+
+  }
+
+  /* @media screen {
     
     header {
 
@@ -165,4 +287,4 @@
       }
     
 
-  }
+  } */
