--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,8 @@
     padding-top: 10px;
   }
 
+  /* nav bar */
+
   .top_Panel {
 
     display: flex;
@@ -101,42 +103,7 @@
     color: rgb(255, 255, 255);
   }
 
-
-  
-
-
-
-  .info_Div {
-    display: flex;
-    justify-content: center;
-    gap: 5vw;
-    padding: 50px 0;
-  }
-
-  .info_Card {
-
-    width: 380px;
-    height: 400px;
-    border: 4px solid rgb(185, 185, 185);
-    padding: 10px;
-    border-radius: 8px;
-  }
-
-  .card_Description {
-
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    height: 300px;
-    overflow: hidden;
-  }
-
-  .read_More {
-
-    display: block;
-    margin: 10px auto 0 auto;
-    width: 90px;
-    height: 40px;
-  }
+  /* footer */
 
   .footer_Div {
 
