--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,4 @@
+
 /* Intro Section */
 
 .intro_Container {
@@ -14,6 +15,7 @@
     transform: translate(-50%, -50%);
     gap: 40px;
     border-radius: 10px;
+    
     
     
     
@@ -81,18 +83,25 @@
 
 .info_Div {
     display: flex;
-    justify-content: center;
-    gap: 5vw;
+    justify-content: space-evenly;
     padding: 50px 0;
+    background-color: rgb(24, 24, 24);
+    
+    
   }
 
   .info_Card {
 
     width: 380px;
     height: 400px;
-    border: 4px solid rgb(185, 185, 185);
     padding: 10px;
     border-radius: 8px;
+    color: white;
+  }
+
+  .card_Title{
+
+    text-align: center;
   }
 
   .card_Description {
@@ -101,12 +110,22 @@
     font-size: 20px;
     height: 300px;
     overflow: hidden;
+    text-align: center;
   }
 
   .read_More {
 
     display: block;
     margin: 10px auto 0 auto;
-    width: 90px;
-    height: 40px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+  }
+
+  .read_More:hover {
+
+    background-color: rgb(17, 17, 17);
+    color: rgb(255, 255, 255);
+    transition: 200ms;
   }
