--- a/styles/home.css
+++ b/styles/home.css
@@ -171,3 +171,59 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.guide_Section {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+
+    background-color: rgb(24, 24, 24);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+
+    padding: 20vh 0;
+}
+
+.guide_Section h2 {
+
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+}
+
+.guide_Graphics {
+
+    padding: 100px 0;
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.icon_Wrapper{
+
+    border: 6px solid rgb(34, 194, 226);
+    border-radius: 50%;
+    padding: 20px;
+    max-width: min-content;
+    margin-bottom: 20px;
+    
+}
+
+
+.steps {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    color: rgb(34, 194, 226);
+    font-size: 20px;
+    font-weight:700;
+    min-width: 240px;
+    max-width: 240px;
+    text-align: center;
+    overflow: hidden;
+}
