--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,7 +126,7 @@
     background-color: rgb(17, 17, 17);
 
     border-top: 5px solid grey;
-    padding: 20px;
+    padding: 5vh 20px;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
