Replace footer tos text and style priv.pol. & tos
Replaces copyright text in the footer with more aesthetically congenial
content. Spaces out the Privacy Policy and ToS texts so that they do not
look crammed together.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,6 +180,12 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
+  .tos {
+
+    display: flex;
+    gap: 25px;
+  }
+
   /* @media screen {
     
     header {
