--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,7 +135,7 @@
 
   .footer_Column {
 
-    max-width: 300px;
+    max-width: 310px;
   }
 
   .footer_Column ul {
@@ -178,6 +178,28 @@
     color: rgb(150, 150, 150);
     font-size: 21px;
     font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .footer_Icon_One, .footer_Icon_Two, .footer_Icon_Three {
+
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-size:contain;
+
+
+  }
+
+  .footer_Icon_One {
+    background-image: url(../Images/Icons/location_on_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+  }
+
+  .footer_Icon_Two {
+    background-image: url(../Images/Icons/phone_in_talk_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+  }
+
+  .footer_Icon_Three {
+    background-image: url(../Images/Icons/mail_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
   }
 
   .tos {
