--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,8 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
 
 /* Intro Section */
 
@@ -7,12 +12,9 @@
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     padding: 5px;
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 80vw;
+    min-height: 700px;
+    height: 80vh;
     gap: 40px;
     border-radius: 10px;
     
