--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,11 +30,14 @@
   header {
 
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
     /* background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=); */
     background-color: black;
     background-size: cover;
     background-position: 100% 30%;
-    padding-top: 10px;
   }
 
   /* nav bar */
@@ -44,12 +47,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
-    padding: 10px;
+    padding: 20px 50px;
     width: 100vw;
+    height: 100px;
     max-width: 100vw;
-    position: sticky;
-    top: 10px;
+    position: relative;
     z-index: 5;
 
   }
@@ -63,25 +65,23 @@
     border-radius:100%;
     object-fit:cover;
     transform: scale(1.35);
-    position: sticky;
-    top: 0;
     
   }
 
  
 
   .global_Nav {
-    border: 1px solid rgba(255, 255, 255, 0.61);
+    border: 1px solid rgba(170, 170, 170, 0.788);
     width: 700px;
     background-color: rgba(0, 0, 0, 0.616);
     backdrop-filter: blur(10px);
     border-radius: 90px;
-    padding: 1vh;
+    padding: 8px;
     flex-grow: 0.3;
     /* max-width: 80%; */
     margin: 0 auto;
     position:fixed;
-    top: 5%;
+    top: 50px;
     left: 50%;
     transform: translate(-50%, -50%);
     
@@ -115,7 +115,7 @@
 
     text-decoration: none;
     /* color: rgb(83, 165, 76); */
-    color: #00b2d6;
+    color: #008ca8;
   }
 
   .footer_Div {
