--- a/styles/services.css
+++ b/styles/services.css
@@ -8,8 +8,9 @@ header {
 
 main {
 
-    height: 200vh;
+    min-height: auto;
     background-color: rgb(19, 19, 19);
+    padding-bottom: 100px;
 
     /* background-color: black; */
 }
@@ -19,14 +20,14 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(https://cdn.prod.website-files.com/6727558e5c774a0b63d63d12/67bb3e1f23b017da45589047_hero-bg.avif);
+    /* background-image: url(https://cdn.prod.website-files.com/6727558e5c774a0b63d63d12/67bb3e1f23b017da45589047_hero-bg.avif);
     background-size: cover;
-    background-position: top;
-    background-color: rgba(0, 0, 0, 0.082);
+    background-position: top; */
+    background-color: rgb(0, 0, 0);
     background-attachment: fixed;
     background-blend-mode:overlay;
 
-    height: calc(100vh - 200px);
+    height: 50vh;
     padding: 150px;
 
     text-align: center;
@@ -34,7 +35,7 @@ main {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
-    font-size: 48px;
+    font-size: 36px;
 }
 
 h1 {
@@ -42,10 +43,10 @@ h1 {
     transform: translate(0, -50px);
 }
 
-/* h1 span{
+h1 span{
 
-    color: #00afce;
-} */
+    color: #20a5da;
+}
 
 .services_List {
 
@@ -58,7 +59,6 @@ h1 {
     align-items: center;
 
     border-top: 4px #00b7ff solid;
-    border-bottom: 4px #00b7ff solid;
 }
 
 .service_Container {
@@ -128,4 +128,98 @@ h1 {
 
     Width: 100%;
     transition: 400ms;
+}
+
+
+/* why choose us */
+
+.why_Choose_Container {
+
+    display: flex;
+    flex-direction: column;
+
+    width: 1200px;
+    height: 650px;
+    margin: 100px auto;
+    margin-bottom: 0;
+    
+
+    border-radius: 30px;
+
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url(https://cdn.prod.website-files.com/6727558e5c774a0b63d63d12/67bb3e1f23b017da45589047_hero-bg.avif);
+
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 21px;
+
+
+    overflow: hidden;
+}
+
+.backdrop_Styling {
+
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-grow: 1;
+}
+
+.backdrop_Styling > div > p {
+
+    background-color: rgba(192, 192, 192, 0.384);
+    border-radius: 20px;
+
+    width: max-content;
+    display: inline-block;
+    padding: 8px  16px;
+    backdrop-filter: blur(12px)
+
+}
+
+.why_Choose_Centerer {
+
+    display: flex;
+    align-items: center;
+
+    flex-grow: 1;
+
+}
+
+.why_Card_Container {
+
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 700px));
+    grid-template-rows: minmax(auto, max-content);
+    row-gap: 20px;
+    column-gap: 20px;
+
+
+}
+
+.why_Choose_Card {
+
+    padding: 10px;
+    height: fit-content;
+    display: flex;
+    background-color: rgba(192, 192, 192, 0.384);
+    border-radius: 20px;
+    backdrop-filter: blur(12px);
+}
+
+.why_Choose_Heading {
+
+    font-size: 46px;
+}
+
+.why_Choose_Titiling {
+
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
 }
