--- a/styles/services.css
+++ b/styles/services.css
@@ -10,7 +10,6 @@ main {
 
     min-height: auto;
     background-color: rgb(19, 19, 19);
-    padding-bottom: 100px;
 
     /* background-color: black; */
 }
@@ -51,6 +50,7 @@ h1 span{
 .services_List {
 
     display: grid;
+    grid-auto-flow: row;
     grid-template-columns:repeat(3, auto);
     
     min-height: fit-content;
@@ -141,7 +141,6 @@ h1 span{
     width: 1200px;
     height: 650px;
     margin: 100px auto;
-    margin-bottom: 0;
     
 
     border-radius: 30px;
@@ -222,4 +221,14 @@ h1 span{
     flex-direction: column;
     gap: 10px;
     justify-content: center;
+}
+
+/* quote section */
+
+.quote_Section {
+
+    height: 600px;
+
+    border-top: 6px solid grey;
+    background-color: rgb(12, 12, 12)
 }
