--- a/styles/services.css
+++ b/styles/services.css
@@ -10,6 +10,7 @@ main {
 
     min-height: auto;
     background-color: rgb(19, 19, 19);
+    padding-bottom: 100px;
 
     /* background-color: black; */
 }
@@ -227,8 +228,74 @@ h1 span{
 
 .quote_Section {
 
-    height: 600px;
+    height: 700px;
+    background-color: rgb(12, 12, 12);
+    padding: 40px 80px;
+    display: flex;
+    justify-content: center;
 
-    border-top: 6px solid grey;
-    background-color: rgb(12, 12, 12)
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.quote_Container {
+    display: flex;
+    max-height: 100%;
+    width: 1200px;
+    justify-content: center;
+    gap: 60px;
+}
+
+.img_Quote_Container {
+
+    height: 600px;
+    width: 600px;
+    min-width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: top;
+
+    overflow: hidden;
+}
+
+.img_Quote {
+
+    height: 980px;
+    width: auto;
+}
+
+.quote_Desc_Positioner {
+
+    display: flex;
+    align-items: center;
+}
+
+.quote_Desc_Container {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+    text-align: center;
+
+}
+
+.quote_Desc_Container h2 {
+
+    font-size: 36px;
+    margin-bottom: 10px;
+
+}
+
+.quote_Desc_Container p {
+
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
+.quote_Contact_Btn {
+
+    padding: 8px 16px;
+
 }
