--- a/styles/services.css
+++ b/styles/services.css
@@ -48,6 +48,39 @@ h1 span{
     color: #20a5da;
 }
 
+/* intro */
+
+.services_Intro {
+
+    width: 100%;
+    padding: 80px;
+    padding-bottom: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+
+    border-top: 4px #00b7ff solid;
+}
+
+.services_Heading {
+
+    font-size: 46px;
+    margin-bottom: 20px;
+}
+
+.intro_Description {
+
+    font-size: 21px;
+    width: 800px;
+
+}
+
 .services_List {
 
     display: grid;
@@ -58,8 +91,6 @@ h1 span{
     height: 700px;
     justify-content: space-evenly;
     align-items: center;
-
-    border-top: 4px #00b7ff solid;
 }
 
 .service_Container {
@@ -282,7 +313,7 @@ h1 span{
 
 .quote_Desc_Container h2 {
 
-    font-size: 36px;
+    font-size: 46px;
     margin-bottom: 10px;
 
 }
