--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,16 @@
   }
 
 
+  .unselectable {
+
+    -webkit-user-select: none; /* Safari */
+    user-select: none;
+  }
+
+
+  a:hover {
+    color: #00b2d6;
+  }
 
   .generic_Button {
 
@@ -19,6 +29,12 @@
     background: linear-gradient(220deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
   }
 
+  .generic_Button a{
+
+    width: 100%;
+    height: 100%;
+  }
+
   .generic_Button:hover {
 
     cursor: pointer;
@@ -29,11 +45,7 @@
 
   header {
 
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
+    
     /* background-image: url(https://media.istockphoto.com/id/1162898563/photo/chicago-urban-skyscrapers-usa.jpg?s=1024x1024&w=is&k=20&c=SPcplbsuxJeRrFnVi82OHSf8tvjayNEjDuyu67g5Zdw=); */
     background-color: black;
     background-size: cover;
@@ -219,6 +231,47 @@
 
   .footer_Icon_Three {
     background-image: url(../Images/Icons/mail_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+  }
+
+  .social_Link {
+
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
+  .footer_Social_Icon {
+
+    height: 20px;
+    width: 20px;
+    background-size: cover;
+
+  }
+
+  #soc_One {
+
+    display: inline-block;
+    content: "";
+    background-image: url(../Images/Icons/socials/linkedin-svgrepo-com.svg);
+  }
+  #soc_Two {
+
+    display: inline-block;
+    content: "";
+    background-image: url(../Images/Icons/socials/facebook-color-svgrepo-com.svg);
+  }
+  #soc_Three {
+
+    display: inline-block;
+    content: "";
+    background-image: url(../Images/Icons/socials/instagram-svgrepo-com.svg);
+  }
+  #soc_Four {
+
+    display: inline-block;
+    content: "";
+    background-image: url(../Images/Icons/socials/tiktok-svgrepo-com\(1\).svg);
+    background-color: #003f58;
   }
 
   .tos {
