Add FAQ section to the about page

--- a/styles/about.css
+++ b/styles/about.css
@@ -104,92 +104,62 @@ h1 {
 
     font-size: 30px;
     text-align: center;
-    margin-bottom: 25px;
     padding: 100px;
 }
 
-.values_Preface {
+/* .values_Preface {
 
 
-}
+} */
 
 
-.values_Grid {
 
-
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    padding: 100px;
-    gap: 40px 40px;
-    justify-content: center;
-    
-
-}
-
-.value_Card {
-    
-    
-    transition: all 200ms ease-in-out;
-}
-
-.value_Thumbnail {
-
-    background-color: rgb(62, 93, 105);
-    height: 400px;
-    width: 300px;
-    border-radius: 20px;
-    overflow: hidden;
-
-    border: 0px solid #00b2d6;
-    transition: all 100ms ease;
-
-    display: flex;
-    justify-content: center;
-
-    box-shadow: 0px 0px 20px rgb(0, 0, 0);
-
-    
-}
-
-.value_Card:hover {
-
-    color: #00b2d6;
-    transform: scale(1.1);
-}
-
-.value_Card:hover > .value_Thumbnail {
-
-    
-    border: 3px solid #00b2d6;
-    
-}
-
-.value_Thumbnail img {
-
-    height: 100%;
-    opacity: 90%;
-    transition: all 400ms ease-in-out;
-
-
-}
-
-.value_Thumbnail:hover img {
-
-    opacity: 100%;
-
-
-}
-
-.values_Grid span {
-
-    margin-top: 20px;
-    font-size: 20px;
-    
-}
 
 /* vision */
 
 .company_Vision {
 
+    padding: 100px;
 
+}
+
+.value_Titling {
+
+    font-size: 30px;
+    text-align: center; 
+
+}
+
+/* Accordion */
+
+.faq_Section {
+
+    background-color: black;
+    padding: 100px 0px;
+
+}
+
+.faq_Section h2 {
+
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 10vh;
+
+}
+
+.accordion_Container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 40vw);
+    gap: 50px;
+    justify-content: center;
+
+    
+}
+
+.subtopic {
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
