--- a/styles/services.css
+++ b/styles/services.css
@@ -9,7 +9,7 @@ header {
 main {
 
     min-height: auto;
-    background-color: rgb(19, 19, 19);
+    background-color: rgb(22, 22, 22);
     padding-bottom: 100px;
 
     /* background-color: black; */
@@ -85,12 +85,12 @@ h1 span{
 
     display: grid;
     grid-auto-flow: row;
-    grid-template-columns:repeat(3, auto);
-    
+    grid-template-columns:repeat(2, auto);
+    padding: 100px;
     min-height: fit-content;
-    height: 700px;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items:center;
+    gap: 60px;
 }
 
 .service_Container {
@@ -132,9 +132,10 @@ h1 span{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.service_Description h2 {
+.service_Description h3 {
 
-    margin: 10px;
+    margin: 5px;
+    font-size: 24px;
 }
 
 .service_Description p {
@@ -142,7 +143,6 @@ h1 span{
     max-height: 145px;
     padding: 0px 20px;
     overflow:hidden;
-
     font-size: 21px;
 }
 
