--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,13 +12,17 @@
   }
 
 
+  .hidden {
+
+    display: none;
+  }
   
 
   .generic_Button {
 
     color: white;
     width: max-content;
-    padding: 15px 20px;
+    
     font-size: 21px;
     border: none;
     border-radius: 25px;
@@ -29,8 +33,12 @@
 
   .generic_Button a{
 
+    display: inline-block;
+    padding: 15px 20px;
     width: 100%;
     height: 100%;
+    text-decoration: none;
+    color: white;
   }
 
   .generic_Button:hover {
@@ -60,7 +68,7 @@
     padding: 20px 50px;
     width: 100vw;
     height: 100px;
-    max-width: 100vw;
+    max-width: 100%;
     position: relative;
     z-index: 5;
 
